# django

./: .replit  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted--workspace-backend-find-path-migrations-py-not-name-init-py-delete-find-path-1755256606816_1755256606818.txt  Pasted-use-railway-CREATE-DATABASE-railway-USE-railway-SHOW-DATABASES-CREATE-TABLE-IF-NOT-EXISTS-schoo-1755253351731_1755253351734.txt  admin_controls_1755310398446.py  legal_pages_1755310398454.py  main2_1755310398455.py  reports_1755310398455.py  teacher_management_1755310398459.py
backend/: backend_requirements.txt  generated_models.py
backend/arrangements/: apps.py  models.py  urls.py  views.py
backend/arrangements/migrations/: 0001_initial.py
backend/attendance/: models.py  urls.py  views.py
backend/attendance/migrations/: 0001_initial.py
backend/authentication/: models.py  serializers.py  urls.py  views.py
backend/authentication/migrations/: 0001_initial.py
backend/existing_modules/: arrangement_logic.py  auth.py  auto_marker.py  csv_importer.py  data_manager.py  utils.py  whatsapp_service.py
backend/existing_modules/components/: arrangements.py  billing.py  support.py  (+4 more)
backend/schedules/: models.py  urls.py  views.py
backend/school_management_system/: settings.py  urls.py
backend/school_system/: apps.py  serializers.py  urls.py  views.py
backend/teachers/: models.py  serializers.py  urls.py  views.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js
(+26 files in other folders)
